[gd_scene load_steps=10 format=2]

[ext_resource path="res://MM.gd" type="Script" id=1]
[ext_resource path="res://art/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/char_right.png" type="Texture" id=3]
[ext_resource path="res://art/block1.png" type="Texture" id=4]
[ext_resource path="res://art/block2.png" type="Texture" id=5]
[ext_resource path="res://art/ladder.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 300
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 120
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="MainMenu" type="Node" index="0"]

[node name="MM" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="MM" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_right = 768.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "WAYT"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="New" type="Button" parent="MM" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 192.0
margin_right = 717.0
margin_bottom = 311.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Continue" type="Button" parent="MM" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 320.0
margin_right = 717.0
margin_bottom = 439.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Exit" type="Button" parent="MM" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 448.0
margin_right = 717.0
margin_bottom = 567.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Credits" type="Label" parent="MM" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 576.0
margin_top = 576.0
margin_right = 1283.0
margin_bottom = 615.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "WAYT was made in 48 hours for Ludum Dare 43"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="char_right" type="Sprite" parent="." index="1"]

position = Vector2( 896, 320 )
texture = ExtResource( 3 )

[node name="block1" type="Sprite" parent="." index="2"]

position = Vector2( 896, 384 )
texture = ExtResource( 4 )

[node name="block2" type="Sprite" parent="." index="3"]

position = Vector2( 832, 384 )
texture = ExtResource( 4 )

[node name="block3" type="Sprite" parent="." index="4"]

position = Vector2( 960, 384 )
texture = ExtResource( 4 )

[node name="block4" type="Sprite" parent="." index="5"]

position = Vector2( 128, 512 )
texture = ExtResource( 5 )

[node name="block5" type="Sprite" parent="." index="6"]

position = Vector2( 192, 512 )
texture = ExtResource( 5 )

[node name="block6" type="Sprite" parent="." index="7"]

position = Vector2( 64, 512 )
texture = ExtResource( 5 )

[node name="ladder" type="Sprite" parent="." index="8"]

position = Vector2( 64, 448 )
texture = ExtResource( 6 )

[connection signal="pressed" from="MM/New" to="MM" method="_on_New_pressed"]

[connection signal="pressed" from="MM/Continue" to="MM" method="_on_Continue_pressed"]

[connection signal="pressed" from="MM/Exit" to="MM" method="_on_Exit_pressed"]


